src/core-crm/objects/Contact_Alternate_Id__c/Contact_Alternate_Id__c.object-meta.xml
<CustomObject>
    <description>Contains all alternative identifiers for a given contact</description>
    <label>Contact Alternate Id</label>
    <nameField>
        <displayFormat>CAI-{000000}</displayFormat>
        <label>Contact Alternate Id Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Alternate Ids</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>