src/core-crm/objects/Contact_Alternate_Id__c/fields/Alternate_Id_Status__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Id_Status__c</fullName>
    <description>Indicating Contact Alternate Id’s status</description>
    <label>Alternate Id Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Duplicate Sanction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>