src/core-crm/objects/Contact_Alternate_Id__c/fields/Alternate_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Id_Type__c</fullName>
    <description>The Type Identity held IN the Contact_Alternate_ID__c</description>
    <label>Alternate Id Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUT Employee ID</fullName>
            </value>
            <value>
                <fullName>QUT Student ID</fullName>
            </value>
            <value>
                <fullName>StudyLink Applicant ID</fullName>
            </value>
            <value>
                <fullName>QTAC Applicant ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>