src/core-crm/objects/Contact_Alternate_Id__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact that the Alternate ID belongs to</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Alternate Ids</relationshipLabel>
    <relationshipName>Contact_Alternate_Ids</relationshipName>
    <type>Lookup</type>
</CustomField>