src/core-crm/objects/Contact_Alternate_Id__c/fields/Contact_Alternate_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alternate_Id__c</fullName>
    <description>The Contact Alternate ID Value</description>
    <label>Contact Alternate Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>