src/core-crm/objects/Contact_Alternate_Id__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The Date the Alternate Id was deactivated</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>