src/core-crm/objects/Contact_Alternate_Id__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The Date the Alternate Id is set to Expire</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>