src/core-crm/objects/Contact_Alternate_Id__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The Date System Received this Alternate ID</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>