src/core-crm/objects/Contact_Alternate_Id__c/fields/Succeeding_Id__c.field-meta.xml
<CustomField>
    <fullName>Succeeding_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID that caused current Id to supersede eg The new student Id</description>
    <label>Succeeding Id</label>
    <referenceTo>Contact_Alternate_Id__c</referenceTo>
    <relationshipLabel>Contact Alternate Ids</relationshipLabel>
    <relationshipName>Contact_Alternate_Ids</relationshipName>
    <type>Lookup</type>
</CustomField>